[UPDATE] unit tests for searching services by budget